PyMaker/datas/object2/RawHTML/Python_DOC_referPages.taking-an-average-of-every-3-points-in-an-array-and-saving-new-values-into-a-new.txt
<div class="post-text" itemprop="text">
<p>I am trying to take an average of every 3 points in an array and output the new values into a new array. However something in my code must be wrong as I keep getting the same error message.</p>
<p>Here is my code:</p>
<pre><code># y average values

avgy = [0]*(len(y1)//3)

for i in range (0, len(y1)-2):
    if (3*(1+i)&lt;=len(y1)):
        avgy[i] = ( y1[3*i+1] + y1[3*i+2] y1[3*i])/3


# x average values

avgx = [0]*(len(x1)//3)

for i in range (0, len(x1)-2):
    if (3*(1+i)&lt;=len(x1)):
        avgx[i] = ( x1[3*i+1] + x1[3*i+2] x1[3*i])/3
</code></pre>
<p>The error message:</p>
<pre><code> File "&lt;ipython-input-12-bebc7029e3d1&gt;", line 16
    avgy[i] = ( y1[3*i+1] + y1[3*i+2] y1[3*i])/3
                                       ^
SyntaxError: invalid syntax
</code></pre>
<p>Thanks in advance,
Oliver</p>
</div>
<div class="post-text" itemprop="text">
<p>There is missing + before y1[3*i])/3 and x1[3*i])/3</p>
<pre><code># y average values

avgy = [0]*(len(y1)//3)

for i in range (0, len(y1)-2):
    if (3*(1+i)&lt;=len(y1)):
        avgy[i] = ( y1[3*i+1] + y1[3*i+2] + y1[3*i])/3


# x average values

avgx = [0]*(len(x1)//3)

for i in range (0, len(x1)-2):
    if (3*(1+i)&lt;=len(x1)):
        avgx[i] = ( x1[3*i+1] + x1[3*i+2] + x1[3*i])/3
</code></pre>
</div>
<span class="comment-copy">You're missing plus signs <code>+</code>. In Python, numbers don't add by simply being next to each other. :P</span>
<span class="comment-copy">thank you for spotting the typo!</span>
<span class="comment-copy">So, for [1,2,3,4,5,6] you want [average([1,2,3]), average([4,5,6])]?</span>
<span class="comment-copy">no i was looking for: ([1,2,3,4,5,6])  average of every three data points i.e. ([2,5])</span>
